CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT(test_interviewbit C)
SET(PROJECT_ROOT ${PROJECT_SOURCE_DIR})
SET(CMAKE_C_STANDARD 11)


FILE(GLOB_RECURSE LIBRARY_SOURCE_FILES "${PROJECT_ROOT}/testfiles/*.c")
ADD_LIBRARY(test ${LIBRARY_SOURCE_FILES})
INCLUDE_DIRECTORIES(${PROJECT_ROOT}/testfiles/)

ADD_EXECUTABLE(test_binary main)
TARGET_LINK_LIBRARIES(test_binary test m)