CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(test_interviewbit C)
SET(PROJECT_ROOT ${PROJECT_SOURCE_DIR})
SET(CMAKE_C_STANDARD 11)

FILE(GLOB LIBRARY_SOURCE_FILES "${PROJECT_ROOT}/src/*.c")
ADD_LIBRARY(interviewbit ${LIBRARY_SOURCE_FILES})

INCLUDE_DIRECTORIES("${PROJECT_ROOT}/src/")

FILE(GLOB_RECURSE UNIT_TESTS_LIST "${PROJECT_ROOT}/src/tests/*.c")

ENABLE_TESTING()

FOREACH (TEST_SOURCE_FILE_NAME ${UNIT_TESTS_LIST})
	FILE(RELATIVE_PATH TEST_NAME "${PROJECT_ROOT}/src/tests/" ${TEST_SOURCE_FILE_NAME})
	MESSAGE("Added ${TEST_NAME} test")
	ADD_EXECUTABLE(${TEST_NAME} ${TEST_SOURCE_FILE_NAME})

	SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/tests")
	TARGET_LINK_LIBRARIES(${TEST_NAME} m cmocka interviewbit)

	ADD_TEST(${TEST_NAME} ${CMAKE_TESTS_OUTPUT_DIRECTORY}/${TEST_NAME})
	SET_TESTS_PROPERTIES(${TEST_NAME} PROPERTIES TIMEOUT 5)
ENDFOREACH (TEST_SOURCE_FILE_NAME)
